# armor_track_package

./: README.md  frames_2026-04-11_07.35.59.gv  frames_2026-04-11_07.36.16.gv
Camera/Data/: 041130220345.mvdat  042162020049.mvdat
Camera/log/: error_20260326-224443.46649  error_20260331-173212.17507  error_20260401-165113.6398  warning_20260326-224443.46649
install/: local_setup.sh  setup.sh
install/armor_drawer/lib/armor_drawer/: armor_drawer
install/armor_drawer/share/armor_drawer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/armor_drawer/share/armor_drawer/cmake/: armor_drawerConfig-version.cmake  armor_drawerConfig.cmake
install/armor_drawer/share/armor_drawer/environment/: ament_prefix_path.dsv  path.dsv
install/armor_interfaces/share/armor_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/armor_interfaces/share/armor_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  armor_interfacesConfig-version.cmake  armor_interfacesConfig.cmake  armor_interfaces__rosidl_typesupport_cExport-noconfig.cmake  armor_interfaces__rosidl_typesupport_cExport-release.cmake  armor_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  armor_interfaces__rosidl_typesupport_introspection_cExport.cmake  armor_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  armor_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_armor_interfaces__rosidl_generator_cExport.cmake  export_armor_interfaces__rosidl_generator_cppExport.cmake  export_armor_interfaces__rosidl_typesupport_fastrtps_cExport-release.cmake  export_armor_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_armor_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_armor_interfaces__rosidl_typesupport_fastrtps_cppExport-release.cmake  export_armor_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/armor_interfaces/share/armor_interfaces/environment/: ament_prefix_path.dsv  (+4 more)
install/armor_tracker_node/lib/armor_tracker_node/: armor_tracker_node
install/armor_tracker_node/share/armor_tracker_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/armor_tracker_node/share/armor_tracker_node/cmake/: armor_tracker_nodeConfig-version.cmake  armor_tracker_nodeConfig.cmake
install/armor_tracker_node/share/armor_tracker_node/environment/: ament_prefix_path.dsv  path.dsv
install/armor_tracker_node/share/armor_tracker_node/launch/: 1.launch.py
install/armor_urdf/share/armor_urdf/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rm_serial_driver/include/rm_serial_driver/: crc.hpp  packet.hpp  rm_serial_driver.hpp
install/rm_serial_driver/lib/rm_serial_driver/: rm_serial_driver_node
install/rm_serial_driver/share/rm_serial_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/Number-Classifier-for-RoboMaster-main/: README.md  README_EN.md  requirements.txt
src/Number-Classifier-for-RoboMaster-main/dataset/: armors.txt  make_txt.py
src/Number-Classifier-for-RoboMaster-main/example/rm_vision/: number_classifier.cpp  number_classifier.hpp
src/Number-Classifier-for-RoboMaster-main/output/: Zenet-sim.onnx  Zenet-已训练好.onnx  Zenet.onnx  best.pth
src/Number-Classifier-for-RoboMaster-main/src/: dataset.py  model.py  train.py
src/armor_drawer/: CMakeLists.txt
src/armor_drawer/include/: DrawMyFunction.h
src/armor_drawer/src/: DrawMyFunction.cpp  main1.cpp
src/armor_interfaces/: CMakeLists.txt
src/armor_tracker/: CMakeLists.txt  README.md  package.xml
src/armor_tracker/include/: ArmorMsg.h  ArmorTracker.hpp  KalmanFilter.h  LightBarProcessor.h  MathTool.h  MultipleKalman.h  Preprocessing.h  RotationCenterSolver.h  Vedio.h  armor_camera_capture.hpp  camera_intrinsics_parser.hpp  extra_kalman_filter.hpp  galaxy_camera.hpp
src/armor_tracker/launch/: 1.launch.py
src/armor_tracker/src/: ArmorTracker.cpp  KalmanFilter.cpp  LightBarProcessor.cpp  MathTool.cpp  MultipleKalman.cpp  Preprocessing.cpp  RotationCenterSolver.cpp  Vedio.cpp  armor_camera_capture.cpp  camera_intrinsics_parser.cpp  extra_kalman_filter.cpp  galaxy_camera.cpp  main1.cpp
src/armor_urdf/: CMakeLists.txt
src/armor_urdf/urdf/: armor_urdf.urdf
src/serial_driver/: CMakeLists.txt
src/serial_driver/include/rm_serial_driver/: rm_serial_driver.hpp
src/serial_driver/src/: main.cpp  rm_serial_driver.cpp
yaml/: galaxy_camera.yaml
(+124 files in other folders)
