<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armor_tracker_node</name>
  <version>1.1.4</version>
  <description>ROS2 Jazzy tracking armor.</description>
  <maintainer email="55038548+luomojim@users.noreply.github.com">luomo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libeigen3-dev</build_depend>

  <depend>armor_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>opencv4</build_depend>

  <exec_depend>opencv4</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>